--- a/Primera pagina/html/index.html
+++ b/Primera pagina/html/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/Primera pagina/styles/styles.css">
     <title>CV</title>
 </head>
 <body>
@@ -28,12 +29,23 @@
         </div>
     </section>
     <main>
-        <p>I am a systems engenier student, i allmost finish my carrier and I'm taking a course about web developing, I also have some experience in web developing as a social service worker.</p>
+        <p>I am a systems engineering student. I almost finished my degree and I am currently taking a course on web development. I also have some experience in web development from my previous work as a social service worker.</p>
         <ul class="social-icons">
 
-            <li><a href="#">
+            <li><a href="#" id="LinkedIn" class="social-icon">
                 <img src="/Primera pagina/Img/linkedin.png" alt="Linkedin">
-                
+            </a></li>
+            <li><a href="#" id="Github" class="social-icon">
+                <img src="/Primera pagina/Img/github.png" alt="Github">
+            </a></li>
+            <li><a href="#" id="Twitter" class="social-icon">
+                <img src="/Primera pagina/Img/twitter.png" alt="Twitter">
+            </a></li>
+            <li><a href="#" id="Youtube" class="social-icon">
+                <img src="/Primera pagina/Img/youtube.png" alt="Youtube">
+            </a></li>
+            <li><a href="#" id="Platzi" class="social-icon">
+                <img src="/Primera pagina/Img/platzi.png" alt="Platzi">
             </a></li>
 
         </ul>
